set(component testlib)
project(${project}-${component} LANGUAGES CXX)

find_package(ZLIB REQUIRED)

set(${PROJECT_NAME}_INCLUDE_DIR "${CMAKE_CURRENT_LIST_DIR}")
set(${PROJECT_NAME}_SOURCES_DIR "${CMAKE_CURRENT_LIST_DIR}")

file(GLOB_RECURSE ${PROJECT_NAME}_HEADERS   "${${PROJECT_NAME}_INCLUDE_DIR}/*.hpp")
file(GLOB_RECURSE ${PROJECT_NAME}_SOURCES   "${${PROJECT_NAME}_SOURCES_DIR}/*.cpp")

add_library(${PROJECT_NAME} STATIC
    ${${PROJECT_NAME}_HEADERS}
    ${${PROJECT_NAME}_SOURCES}
)

add_library(${project}::${component} ALIAS ${PROJECT_NAME})

set_target_properties(${PROJECT_NAME} PROPERTIES
    CXX_STANDARD                17
    CXX_STANDARD_REQUIRED       YES
    CXX_EXTENSIONS              NO
    POSITION_INDEPENDENT_CODE   YES
    RUNTIME_OUTPUT_DIRECTORY    "${CMAKE_BINARY_DIR}/bin"
    LIBRARY_OUTPUT_DIRECTORY    "${CMAKE_BINARY_DIR}/lib"
    ARCHIVE_OUTPUT_DIRECTORY    "${CMAKE_BINARY_DIR}/lib"
)

message(STATUS "DIR:  ${${PROJECT_NAME}_INCLUDE_DIR}")

target_include_directories(${PROJECT_NAME}
    PUBLIC
     ${CMAKE_CURRENT_LIST_DIR}
)
target_link_libraries(${PROJECT_NAME}
    PRIVATE
     ZLIB::ZLIB
)
